--- a/2006/src/config/Imake.tmpl
+++ b/2006/src/config/Imake.tmpl
@@ -219,7 +219,7 @@ XCOMM the platform-specific parameters - edit site.def to change
 #endif
 
 #ifndef HasLargeTmp
-#define HasLargeTmp		NO	/* be paranoid */
+#define HasLargeTmp		YES	/* be paranoid */
 #endif
 
 #ifndef HasBSD44Sockets
